Parallel Execution Of Smoke Tests