@@ -26,24 +26,68 @@
 				<version>3.0.0-M3</version>
 
 				<configuration>
-
-					<threadCount>4</threadCount>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.20</version>
-				<configuration>
 					<systemPropertyVariables>
 						<RemotelyYorN>N</RemotelyYorN>
 					</systemPropertyVariables>
+
+					<forkCount>2</forkCount>
+					<reuseForks>false</reuseForks>
+
+					<threadCount>10</threadCount> <parallel>classes</parallel>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<testFailureIgnore>true</testFailureIgnore>
+					<includes>
+						<include>**/Parallel*IT.class</include>
+					</includes>
+					<!--<forkMode>once</forkMode>-->
+					<!--<threadCount>4</threadCount>-->
 				</configuration>
+			</plugin>
+
+
+			<plugin>
+				<groupId>com.github.temyers</groupId>
+				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
+				<version>4.2.0</version>
+				<executions>
+					<execution>
+						<id>generateRunners</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>generateRunners</goal>
+						</goals>
+						<configuration>
+							<!-- Mandatory -->
+							<!-- List of package names to scan for glue code. -->
+							<glue>
+							<package>co.uk.optum</package>
+
+								<!--<package>co.uk.optum.utility</package>-->
+							</glue>
+							<featuresDirectory>src/test/resources/features/</featuresDirectory>
+							<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
+							<parallelScheme>FEATURE</parallelScheme>
+							<customVmTemplate>src/test/resources/runnerTemplate1.vm</customVmTemplate>
+
+							<strict>true</strict>
+							<!-- CucumberOptions.monochrome property -->
+							<monochrome>true</monochrome>
+
+							<tags>
+								<tag>@jenkinsTest</tag>
+							</tags>
+
+
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 
 
 		</plugins>
+
+
 	</build>
 	<repositories>
 		<repository>
@@ -72,6 +116,12 @@
 			<version>2.6</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/net.serenity-bdd/serenity-cucumber -->
+		<dependency>
+			<groupId>net.serenity-bdd</groupId>
+			<artifactId>serenity-cucumber</artifactId>
+			<version>1.9.45</version>
+		</dependency>
 
 
 
@@ -171,4 +221,9 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+
+
+	<!-- <tag>${tagsToIgnore}</tag> -->
+
+
 </project>
